Refactor project structure to use '@package' namespace for ESLint and TypeScript configurations. Update package.json scripts and dependencies, including adding a clean script. Enhance web application with new components and improve layout. Update authentication flow and add signup functionality. Remove unused files and optimize imports across the codebase.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "@workspace/typescript-config/nextjs.json",
+  "extends": "@package/typescript-config/nextjs.json",
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"],
-      "@workspace/ui/*": ["../../packages/ui/src/*"]
+      "@package/ui/*": ["../../packages/ui/src/*"]
     },
     "plugins": [
       {
