--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -11,10 +11,10 @@
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "hooks": "@/hooks",
-    "lib": "@/lib",
-    "ui": "@/components"
+    "components": "@package/ui/components",
+    "utils": "@package/ui/lib/utils",
+    "hooks": "@package/ui/hooks",
+    "lib": "@package/ui/lib",
+    "ui": "@package/ui/components"
   }
 }
