--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -14,7 +14,7 @@
     "components": "@/components",
     "hooks": "@/hooks",
     "lib": "@/lib",
-    "utils": "@workspace/ui/lib/utils",
-    "ui": "@workspace/ui/components"
+    "utils": "@package/ui/lib/utils",
+    "ui": "@package/ui/components"
   }
 }
