--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "typecheck": "tsc --noEmit",
-    "cypress": "cypress open"
+    "cypress:chrome": "cypress run --browser chrome",
+    "cypress": "cypress open",
+    "clean": "rm -rf .next && rm -rf node_modules"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -32,7 +34,7 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.3",
-    "@workspace/ui": "workspace:*",
+    "@package/ui": "workspace:*",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "jose": "^6.0.11",
@@ -52,8 +54,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@workspace/eslint-config": "workspace:^",
-    "@workspace/typescript-config": "workspace:*",
+    "@package/eslint-config": "workspace:*",
+    "@package/typescript-config": "workspace:*",
     "cypress": "^14.3.2",
     "typescript": "^5.7.3"
   }
