--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@workspace/eslint-config",
+  "name": "@package/eslint-config",
   "version": "0.0.0",
   "type": "module",
   "private": true,
@@ -9,17 +9,18 @@
     "./react-internal": "./react-internal.js"
   },
   "devDependencies": {
+    "@eslint/js": "9.26.0",
     "@next/eslint-plugin-next": "^15.1.7",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^9.20.1",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "10.1.3",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-turbo": "^2.4.2",
-    "globals": "^15.15.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1"
+    "globals": "16.1.0",
+    "typescript": "^5",
+    "typescript-eslint": "8.32.0"
   }
 }
